; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/limits/extr_limits.c_setrlimit_proc.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/limits/extr_limits.c_setrlimit_proc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rlimit = type { i32 }

@CTL_KERN = common dso_local global i32 0, align 4
@KERN_PROC = common dso_local global i32 0, align 4
@KERN_PROC_RLIMIT = common dso_local global i32 0, align 4
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"sysctl: kern.proc.rlimit: %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, %struct.rlimit*)* @setrlimit_proc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setrlimit_proc(i32 %0, i32 %1, %struct.rlimit* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.rlimit*, align 8
  %7 = alloca i32, align 4
  %8 = alloca [5 x i32], align 16
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.rlimit* %2, %struct.rlimit** %6, align 8
  %9 = load i32, i32* @CTL_KERN, align 4
  %10 = getelementptr inbounds [5 x i32], [5 x i32]* %8, i64 0, i64 0
  store i32 %9, i32* %10, align 16
  %11 = load i32, i32* @KERN_PROC, align 4
  %12 = getelementptr inbounds [5 x i32], [5 x i32]* %8, i64 0, i64 1
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* @KERN_PROC_RLIMIT, align 4
  %14 = getelementptr inbounds [5 x i32], [5 x i32]* %8, i64 0, i64 2
  store i32 %13, i32* %14, align 8
  %15 = load i32, i32* %4, align 4
  %16 = getelementptr inbounds [5 x i32], [5 x i32]* %8, i64 0, i64 3
  store i32 %15, i32* %16, align 4
  %17 = load i32, i32* %5, align 4
  %18 = getelementptr inbounds [5 x i32], [5 x i32]* %8, i64 0, i64 4
  store i32 %17, i32* %18, align 16
  %19 = getelementptr inbounds [5 x i32], [5 x i32]* %8, i64 0, i64 0
  %20 = load %struct.rlimit*, %struct.rlimit** %6, align 8
  %21 = call i32 @sysctl(i32* %19, i32 5, i32* null, i32 0, %struct.rlimit* %20, i32 4)
  store i32 %21, i32* %7, align 4
  %22 = load i32, i32* %7, align 4
  %23 = icmp eq i32 %22, -1
  br i1 %23, label %24, label %28

24:                                               ; preds = %3
  %25 = load i32, i32* @EXIT_FAILURE, align 4
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @err(i32 %25, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %26)
  br label %28

28:                                               ; preds = %24, %3
  ret void
}

declare dso_local i32 @sysctl(i32*, i32, i32*, i32, %struct.rlimit*, i32) #1

declare dso_local i32 @err(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
